package Model;

public enum Colors {

    WHITE,

    BLACK;

}
