package Model;

public class Position {
    public int x; // Ligne

    public int y; // Colonne

    public Position(int pX, int pY)
    {
        x = pX;
        y = pY;
    }

    public Position()
    {

    }

}
